--- a/assets/style.css
+++ b/assets/style.css
@@ -54,7 +54,7 @@ body {
 }
 
 .yogaRat {
-	width: 100%;
+  width: 100%;
 }
 
 .appStore {
@@ -91,4 +91,230 @@ body {
     margin: 0px;
     margin-top: 17px
   }
+}
+
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #fff
+}
+
+a:link,
+a:hover,
+a:visited,
+a:active {
+  color: #1d63ea;
+  text-decoration: none
+}
+
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0
+}
+
+.features {
+  grid-area: c;
+  display: flex;
+  flex: 0 1 auto;
+  align-content: flex-start;
+  justify-content: flex-start;
+  flex-grow: 1;
+  flex-wrap: wrap;
+  margin-top: 93px
+}
+
+.feature {
+  display: flex;
+  padding-top: 63px;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: calc(100%/3)
+}
+
+.feature:nth-child(-n+3) {
+  padding-top: 0px
+}
+
+.feature:nth-child(3n) {
+  padding-right: 0px
+}
+
+.feature:nth-child(3n+1) {
+  padding-left: 0px
+}
+
+.iconBack {
+  color: #e6e6e6
+}
+
+.iconTop {
+  color: #1d63ea
+}
+
+.socialIconBack {
+  color: #e6e6e6
+}
+
+.socialIconTop {
+  color: #666
+}
+
+.featureText {
+  margin-left: 18px
+}
+
+.featureText>h3 {
+  color: #000
+}
+
+.featureText>p {
+  color: #666;
+  margin-top: 8px;
+  line-height: 1.5
+}
+
+@media only screen and (max-width: 992px) {
+  .features {
+    flex-grow: 1;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 11px
+  }
+
+  .feature {
+    display: flex;
+    padding-top: 41px;
+    padding-left: 15px;
+    padding-right: 15px;
+    width: 100%
+  }
+
+  .feature:nth-child(-n+3) {
+    padding-top: 41px
+  }
+
+  .feature:nth-child(1) {
+    padding-top: 0px
+  }
+
+  .feature:nth-child(3n) {
+    padding-right: 15px
+  }
+
+  .feature:nth-child(3n+1) {
+    padding-left: 15px
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .features {
+    flex-grow: 1;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 11px
+  }
+
+  .feature {
+    display: flex;
+    padding-top: 41px;
+    padding-left: 0px;
+    padding-right: 0px;
+    width: 100%
+  }
+
+  .feature:nth-child(-n+3) {
+    padding-top: 41px
+  }
+
+  .feature:nth-child(1) {
+    padding-top: 0px
+  }
+
+  .feature:nth-child(3n) {
+    padding-right: 0px
+  }
+
+  .feature:nth-child(3n+1) {
+    padding-left: 0px
+  }
+}
+
+footer {
+  grid-area: f;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center
+}
+
+.footerText {
+  color: #666;
+  display: block;
+  line-height: 1.5;
+  width: 100%;
+  text-align: center;
+  padding-top: 70px;
+  padding-bottom: 70px
+}
+
+.footerIcons {
+  padding-bottom: 70px;
+  display: flex;
+  flex: 0 0 100%;
+  justify-content: center
+}
+
+.footerLinks {
+  display: flex;
+  text-align: center;
+  padding-bottom: 70px
+}
+
+.footerLinks a {
+  margin-right: 30px
+}
+
+.footerLinks a:last-child {
+  margin-right: 0px
+}
+
+@media only screen and (max-width: 768px) {
+  .footerLinks {
+    flex-direction: column
+  }
+
+  .footerLinks a {
+    justify-content: stretch;
+    margin-right: 0px;
+    margin-top: 20px
+  }
+
+  .footerLinks a:first-child {
+    margin-top: 0px
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .footerText {
+    color: #666;
+    display: block;
+    line-height: 1.5;
+    width: 100%;
+    text-align: center;
+    padding-top: 54px;
+    padding-bottom: 61px
+  }
+
+  .footerIcons {
+    padding-bottom: 70px;
+    display: flex
+  }
+}
+
+.hidden {
+  display: none
 }
