--- a/assets/style.css
+++ b/assets/style.css
@@ -91,6 +91,10 @@ body {
     margin: 0px;
     margin-top: 17px
   }
+
+  .yoga {
+    padding-top: 50px;
+  }
 }
 
 body {
@@ -103,7 +107,7 @@ a:link,
 a:hover,
 a:visited,
 a:active {
-  color: #1d63ea;
+  color: #D33A2C;
   text-decoration: none
 }
 
@@ -153,7 +157,7 @@ a:active {
 }
 
 .iconTop {
-  color: #1d63ea
+  color: #D33A2C
 }
 
 .socialIconBack {
