--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Nunito';
-  background: rgb(250, 250, 250);
+  background: rgb(247, 247, 247);
 }
 
 .container {
@@ -10,7 +10,6 @@ body {
   padding-left: 15px;
   padding-right: 15px;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 10px 876px auto auto;
   grid-column-gap: 30px;
   grid-template-areas: "h h h h h h h h h h h h""p p p p p i i i i i i i""c c c c c c c c c c c c""f f f f f f f f f f f f"
 }
@@ -30,85 +29,64 @@ body {
   }
 }
 
-.iphone {
-  grid-area: p;
-  background-image: url("/assets/iphone.png");
-  background-size: 400px auto;
-  background-repeat: no-repeat;
-  margin-top: 68px
-}
-
-.screenshot {
-  width: 349px;
-  -webkit-clip-path: url(#screenMask);
-  clip-path: url(#screenMask);
-  margin-left: 26px;
-  margin-top: 23px
-}
-
-.yoga {
-  grid-area: i;
-  margin: auto;
-  text-align: center;
-  padding-top: 10px;
-}
-
-.yogaRat {
-  width: 100%;
-}
-
-.appStore {
-  height: 75px;
-}
-
-@media only screen and (max-width: 1070px) {
-  .iphone {
-    background-size: 370px auto
-  }
-
-  .screenshot {
-    width: 322px;
-    margin-left: 24px;
-    margin-top: 22px
-  }
-}
-
-@media only screen and (max-width: 992px) {
-  .iphone {
-    display: flex;
-    background-size: 260px auto;
-    background-position: center 0;
-    margin-top: 47px;
-    justify-content: center;
-    padding-bottom: 75px
-  }
-
-  .screenshot {
-    width: 226px;
-    height: 488px;
-    -webkit-clip-path: url(#screenMask);
-    clip-path: url(#screenMask);
-    margin: 0px;
-    margin-top: 17px
-  }
-
-  .yoga {
-    padding-top: 50px;
-  }
-}
-
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fff
+  background-color: #fff;
+  color: rgba(0, 0, 0, 0.85);
 }
 
-a:link,
-a:hover,
-a:visited,
-a:active {
-  color: #D33A2C;
-  text-decoration: none
+.logo {
+  height: 32px;
+}
+
+.nav {
+  display: flex;
+  padding: 18px 80px;
+  background-color: transparent;
+  flex-direction: row;
+  align-items: center;
+  max-width: 1380px;
+  margin: 0 auto;
+}
+
+.nav-links {
+  flex-grow: 4;
+  text-align: right;
+}
+
+.nav a {
+  margin-left: 32px;
+  text-decoration: none;
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.85);
+}
+
+.nav a:hover {
+  color: #D33A2C
+}
+
+.nav a.active {
+  border-bottom: 1px solid #D33A2C;
+  padding-bottom: 8px;
+}
+
+.nav .icon {
+  display: none;
+} 
+
+.download {
+  height: 48px;
+  display: inline-block;
+  color: white !important;
+  background: #D33A2C;
+  padding: 4px 40px;
+  line-height: 42px;
+  white-space: nowrap;
+  font-size: 15px;
+  border-radius: 8px;
+  text-align: center;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0 , 0, .08);
 }
 
 *,
@@ -173,7 +151,7 @@ a:active {
 }
 
 .featureText>h3 {
-  color: #000
+  color: rgba(0, 0, 0, 0.85)
 }
 
 .featureText>p {
@@ -245,77 +223,6 @@ a:active {
 
   .feature:nth-child(3n+1) {
     padding-left: 0px
-  }
-}
-
-footer {
-  grid-area: f;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center
-}
-
-.footerText {
-  color: #666;
-  display: block;
-  line-height: 1.5;
-  width: 100%;
-  text-align: center;
-  padding-top: 70px;
-  padding-bottom: 70px
-}
-
-.footerIcons {
-  padding-bottom: 70px;
-  display: flex;
-  flex: 0 0 100%;
-  justify-content: center
-}
-
-.footerLinks {
-  display: flex;
-  text-align: center;
-  padding-bottom: 70px
-}
-
-.footerLinks a {
-  margin-right: 30px
-}
-
-.footerLinks a:last-child {
-  margin-right: 0px
-}
-
-@media only screen and (max-width: 768px) {
-  .footerLinks {
-    flex-direction: column
-  }
-
-  .footerLinks a {
-    justify-content: stretch;
-    margin-right: 0px;
-    margin-top: 20px
-  }
-
-  .footerLinks a:first-child {
-    margin-top: 0px
-  }
-}
-
-@media only screen and (max-width: 992px) {
-  .footerText {
-    color: #666;
-    display: block;
-    line-height: 1.5;
-    width: 100%;
-    text-align: center;
-    padding-top: 54px;
-    padding-bottom: 61px
-  }
-
-  .footerIcons {
-    padding-bottom: 70px;
-    display: flex
   }
 }
 
