--- a/assets/style.css
+++ b/assets/style.css
@@ -10,8 +10,7 @@ body {
   display: grid;
   margin: auto;
   max-width: 1380px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 18px 80px;
   grid-template-columns: repeat(12, 1fr);
   grid-column-gap: 30px;
   grid-template-areas: "h h h h h h h h h h h h""p p p p p i i i i i i i""c c c c c c c c c c c c""f f f f f f f f f f f f"
@@ -19,6 +18,7 @@ body {
 
 @media only screen and (max-width: 768px) {
   .container {
+    padding: 9px 20px;
     grid-template-rows: 10px 811px auto auto
   }
 }
@@ -32,6 +32,77 @@ body {
   }
 }
 
+.buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.buttons a {
+  margin: 5px auto;
+}
+
+@media screen and (max-width: 1200px) {
+  .col-2 {
+    width: 100%;
+  }
+  .small-order-1 {
+    order: 1;
+  }
+  .small-order-2 {
+    order: 2;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .hero-image {
+    margin-top: 30px;
+    width: 90%;
+    position: relative;
+  }
+  .copy {
+    top: 0px;
+  }
+  .buttons {
+    margin-top: 32px;
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 1200px) and (min-width: 900px) {
+  .copy {
+    top: 0px;
+  }
+  .buttons {
+    margin-top: 32px;
+  }
+  .hero-image {
+    margin-top: 60px;
+    width: 75%;
+    position: relative;
+  }
+}
+
+@media screen and (min-width: 1201px) {
+  .copy {
+    top: -60px;
+  }
+  .buttons {
+    margin-top: 56px;
+  }
+  .hero-image {
+    width: 87%;
+    left: 10%;
+    position: relative;
+  }
+}
+
+@media screen and (min-width: 1201px) {
+  .col-2 {
+    width: 50%;
+    margin: auto;
+  }
+}
+ 
 .app-store {
   height: 75px;
 }
@@ -53,27 +124,39 @@ a {
   text-decoration: none;
 }
 
-.hero-image {
-  width: 87%;
-  left: 10%;
-  position: relative;
+@media only screen and (max-width: 1200px) {
+  section {
+    padding-top: 20px;
+  }
 }
 
-.col-2 {
-  width: 50%;
-  margin: auto;
+@media only screen and (min-width: 1201px) {
+  section {
+    padding-top: 50px;
+  }  
 }
 
 section {
   display: block;
-  padding: 50px 0;
   position: relative;
   overflow: hidden;
 }
 
+@media only screen and (max-width: 1200px) {
+  h1 {
+    font-size: 40px;
+    line-height: 40px;
+  }
+}
+
+@media only screen and (min-width: 1201px) {
+  h1 {
+    font-size: 60px;
+    line-height: 60px;
+  }
+}
+
 h1 {
-  font-size: 60px;
-  line-height: 60px;
   letter-spacing: -1px;
   margin: 0;
   margin-bottom: 32px;
@@ -81,6 +164,17 @@ h1 {
   border: 0;
 }
 
+@media only screen and (max-width: 1200px) {
+  .section-content {
+    padding: 0 20px;
+  }
+}
+
+@media only screen and (min-width: 1201px) {
+  .section-content {
+    padding: 0 100px;
+  }  
+}
 .section-content {
   display: flex;
   max-width: 1380px;
@@ -89,7 +183,6 @@ h1 {
   align-items: center;
   justify-content: space-between;
   flex-direction: row;
-  padding: 0 100px;
   text-align: left;
 }
 
@@ -99,23 +192,76 @@ h1 {
   position: relative;
 }
 
+
+@media screen and (max-width: 1200px) {
+  .nav {
+    padding: 18px 20px;
+  }
+}
+
+@media screen and (min-width: 1201px) {
+  .nav {
+    padding: 18px 80px;
+  }
+}
+
+button {
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+}
+
 .nav {
   display: flex;
-  padding: 18px 80px;
   background-color: transparent;
-  flex-direction: row;
   align-items: center;
-  max-width: 1380px;
   margin: 0 auto;
+  max-width: 1380px;
+}
+
+@media screen and (max-width: 1200px) {
+  .nav-links {
+    position: absolute;
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+    top: 75px;
+    left: 0;
+    z-index: 100;
+    background: white;
+    padding: 10px;
+  }
+  .nav-links a {
+    padding: 8px 20px;
+  }
+  .hamburgler {
+    flex-grow: 4;
+    text-align: right;
+  }
+}
+
+@media screen and (min-width: 1201px) {
+  .hamburgler {
+    display: none;
+  }
+  .nav a {
+    margin-left: 32px;
+  }
+  .nav-links {
+    text-align: right;
+  }
+}
+
+.visible {
+  display: flex !important;
 }
 
 .nav-links {
   flex-grow: 4;
-  text-align: right;
 }
 
 .nav a {
-  margin-left: 32px;
   text-decoration: none;
   font-size: 16px;
   color: rgba(0, 0, 0, 0.85);
@@ -135,7 +281,6 @@ h1 {
 } 
 
 .download {
-  height: 48px;
   display: inline-block;
   color: white !important;
   background: #D33A2C;
