--- a/assets/style.css
+++ b/assets/style.css
@@ -456,11 +456,12 @@ footer {
 }
 
 .borda {
-  border-top: 1px solid #666;
+  border-top: 1px solid #999;
   margin-bottom: 20px;
 }
 
 .flexible {
+  color: #666;
   width: 100%;
   font-style: normal;
   font-weight: 500;
@@ -468,12 +469,21 @@ footer {
   line-height: 28px;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .flexible a {
   text-decoration: none;
   color: #666;
-  font-size: 16px;
+  font-size: 13px;
+  margin-left: 32px;
+}
+
+.footerText {
+  flex-grow: 1;
+  text-align: center;
+  font-size: 13px;
+  color: #666;
 }
 
 .hidden {
