--- a/assets/style.css
+++ b/assets/style.css
@@ -64,7 +64,6 @@ body {
   }
   .buttons {
     margin-top: 32px;
-    flex-direction: column;
   }
 }
 
@@ -96,15 +95,27 @@ body {
   }
 }
 
+.section-content a {
+  color: #D33A2C;
+}
+
+@media screen and (min-width: 901px) {
+  .app-store {
+    height: 75px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .app-store {
+    height: 60px;
+  }
+}
+
 @media screen and (min-width: 1201px) {
   .col-2 {
     width: 50%;
     margin: auto;
   }
-}
- 
-.app-store {
-  height: 75px;
 }
 
 p {
@@ -132,7 +143,7 @@ a {
 
 @media only screen and (min-width: 1201px) {
   section {
-    padding-top: 50px;
+    padding-top: 30px;
   }  
 }
 
@@ -172,8 +183,12 @@ h1 {
 
 @media only screen and (min-width: 1201px) {
   .section-content {
-    padding: 0 100px;
-  }  
+    padding: 0 80px;
+  }
+}
+
+h2 {
+  font-size: 40px;
 }
 
 .section-content {
@@ -188,11 +203,11 @@ h1 {
 }
 
 .logo {
+  margin-left: 0px;
   height: 32px;
   top: 4px;
   position: relative;
 }
-
 
 @media screen and (max-width: 1200px) {
   .nav {
