--- a/assets/style.css
+++ b/assets/style.css
@@ -210,7 +210,7 @@ h2 {
 
 .section-content {
   display: flex;
-  max-width: 1380px;
+  max-width: 1140px;
   margin: auto;
   flex-wrap: wrap;
   align-items: center;
@@ -249,7 +249,7 @@ button {
   background-color: transparent;
   align-items: center;
   margin: 0 auto;
-  max-width: 1380px;
+  /* max-width: 1380px; */
 }
 
 @media screen and (max-width: 1200px) {
@@ -477,7 +477,7 @@ button {
 
 @media screen and (min-width: 1201px) {
   footer {
-    max-width: 1380px;
+    max-width: 1140px;
     padding: 24px 80px;
     margin: 20px auto;
   }
@@ -605,7 +605,7 @@ h4 {
 
 .some-content {
   display: flex;
-  max-width: 1380px;
+  max-width: 1140px;
   margin: auto;
   align-items: flex-start;
   flex-direction: column;
